# NewsLens

./: .env.example  .gitignore  Dockerfile  README.md  architecture_spec.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
data/: raw_articles.jsonl
docs/: api_reference.md  architecture.md  data_contracts.md  deployment_guide.md  modules.md  overview.md  performance.md  project_structure.md  responsible_ai.md  tech_stack.md
scripts/: benchmark.py  install.ps1  install.sh  run_local.ps1  run_pathway_pipeline.py  run_pathway_serve.py  run_website.bat  run_website.ps1  run_website.sh  seed_demo_data.py  sync_news_sources.py
src/m0_ingestion/: __init__.py  demo_data.py  document_store.py  pipeline.py  schemas.py  vector_store.py
src/m0_ingestion/connectors/: __init__.py  newsapi_connector.py  rss_connector.py  scraper_connector.py
src/m0_ingestion/processors/: __init__.py  chunker.py  embedder.py  normalizer.py
src/m1_intent/: __init__.py  classifier.py  prompts.py  schemas.py
src/m2_agents/: __init__.py  assembler.py  bias_agent.py  graph.py  schemas.py  state.py  summary_agent.py  supervisor.py  timeline_agent.py  validators.py
src/m2_agents/crag/: __init__.py  evaluator.py  rewriter.py  schemas.py
src/m2_agents/prompts/: __init__.py  bias.py  crag.py  rewrite.py  summary.py  timeline.py
src/m2_agents/retrieval/: __init__.py  base.py  bing_client.py  failure_simulation.py  filters.py  local_client.py  manager.py  pathway_client.py  runtime.py  scraper_client.py  tavily_client.py
src/m3_bias/: __init__.py  engine.py  framing.py  schemas.py  scoring.py  sentiment.py
src/m4_timeline/: __init__.py  deduplicator.py  extractor.py  schemas.py  synthesizer.py
src/m5_ui/api/: __init__.py  deps.py  pathway_serve.py  routes.py  schemas.py  server.py
src/m5_ui/static/css/: animations.css  components.css  main.css
src/m5_ui/static/js/: bias_chart.js  main.js  query.js  timeline.js  trace_panel.js
src/m5_ui/templates/: about.html  index.html  results.html
src/shared/: __init__.py  cache.py  config.py  constants.py  exceptions.py  llm_factory.py  logging.py  retry.py  types.py
src/shared/prompts/: __init__.py  crag.py  explanation.py  framing.py  intent.py  summary.py  timeline.py
tests/: test_m0.py  test_m1.py
tests/contract/: test_m0_contracts.py  test_m1_contracts.py  test_m2_contracts.py  test_m3_contracts.py  test_m4_contracts.py
tests/fixtures/: mock_newsapi_response.json  sample_articles.json
tests/unit/: test_m1_classifier.py  test_m3_bias.py  test_m4_timeline.py  test_retrieval_resilience.py
