[tool.poetry]
name = "newslens"
version = "0.1.0"
description = "Dynamic Agentic RAG — Real-Time News Analysis & Bias Detection Platform"
authors = ["Shreyansh Verma <shreyansh@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "src" }, { include = "schemas" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"

# ── Streaming Runtime ────────────────────────────────────────────────────────
pathway = ">=0.14.0"

# ── Agent Orchestration ──────────────────────────────────────────────────────
langgraph = ">=0.2.0"
langchain-core = ">=0.3.0"
langchain-openai = ">=0.2.0"
langchain-anthropic = ">=0.2.0"

# ── LLM Providers ───────────────────────────────────────────────────────────
openai = ">=1.40.0"
anthropic = ">=0.34.0"
httpx = ">=0.27.0"

# ── Embeddings ───────────────────────────────────────────────────────────────
sentence-transformers = ">=3.0.0"

# ── Sentiment & NLP ──────────────────────────────────────────────────────────
transformers = ">=4.44.0"
torch = ">=2.4.0"
vaderSentiment = ">=3.3.2"
spacy = ">=3.7.0"

# ── News Sources ─────────────────────────────────────────────────────────────
newsapi-python = ">=0.2.7"
feedparser = ">=6.0.11"

# ── Web Scraping (Tier-3 Fallback) ───────────────────────────────────────────
playwright = ">=1.46.0"
beautifulsoup4 = ">=4.12.0"
lxml = ">=5.0.0"

# ── Data Validation & Configuration ──────────────────────────────────────────
pydantic = ">=2.8.0"
pydantic-settings = ">=2.4.0"
python-dotenv = ">=1.0.1"

# ── Resilience & Async ───────────────────────────────────────────────────────
tenacity = ">=9.0.0"
anyio = ">=4.4.0"

# ── UI & Visualization ───────────────────────────────────────────────────────
streamlit = ">=1.37.0"
plotly = ">=5.23.0"

# ── CLI ───────────────────────────────────────────────────────────────────────
typer = { version = ">=0.12.0", extras = ["all"] }
rich = ">=13.7.0"

# ── Logging ───────────────────────────────────────────────────────────────────
loguru = ">=0.7.2"

# ── Utilities ─────────────────────────────────────────────────────────────────
python-dateutil = ">=2.9.0"
ujson = ">=5.10.0"
cachetools = ">=5.4.0"

[tool.poetry.group.dev.dependencies]
# ── Testing ───────────────────────────────────────────────────────────────────
pytest = ">=8.3.0"
pytest-asyncio = ">=0.24.0"
pytest-cov = ">=5.0.0"
pytest-mock = ">=3.14.0"
httpx = ">=0.27.0"   # already in main, repeated here for clarity in dev context

# ── Code Quality ─────────────────────────────────────────────────────────────
ruff = ">=0.6.0"
mypy = ">=1.11.0"
pre-commit = ">=3.8.0"

# ── Type Stubs ────────────────────────────────────────────────────────────────
types-requests = ">=2.32.0"
types-beautifulsoup4 = ">=4.12.0"
types-python-dateutil = ">=2.9.0"

[tool.poetry.scripts]
newslens = "main:app"

# ── Pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["src", "schemas"]

# ── MyPy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["core", "schemas"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
