[tool.poetry]
name = "newslens"
version = "0.1.0"
description = "Pathway-backed agentic RAG for live news analysis and bias detection"
authors = ["Shreyansh Verma <shreyansh@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
fastapi = ">=0.111.0"
uvicorn = ">=0.30.1"
jinja2 = ">=3.1.2"
langgraph = ">=0.2.0"
langchain-core = ">=0.3.0"
langchain-google-genai = ">=2.0.0"
pathway = { version = ">=0.31.0", markers = "platform_system != 'Windows'" }
httpx = ">=0.27.0"
feedparser = ">=6.0.11"
beautifulsoup4 = ">=4.12.0"
lxml = ">=5.0.0"
numpy = ">=1.26.0"
vaderSentiment = ">=3.3.2"
pydantic = ">=2.8.0"
pydantic-settings = ">=2.4.0"
python-dotenv = ">=1.0.1"
tenacity = ">=9.0.0"
anyio = ">=4.4.0"
typer = { version = ">=0.12.0", extras = ["all"] }
rich = ">=13.7.0"
loguru = ">=0.7.2"
python-dateutil = ">=2.9.0"
ujson = ">=5.10.0"
cachetools = ">=5.4.0"
tavily-python = ">=0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0"
pytest-asyncio = ">=0.24.0"
pytest-cov = ">=5.0.0"
pytest-mock = ">=3.14.0"
ruff = ">=0.6.0"
mypy = ">=1.11.0"
pre-commit = ">=3.8.0"
types-beautifulsoup4 = ">=4.12.0"
types-python-dateutil = ">=2.9.0"

[tool.poetry.scripts]
newslens = "main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
